--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-5">
         <div class="col">
             <div class="card h-100">
-                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/08/78/f2/786293-pool.jpg?w=300&h=300&s=1" class="card-img-top" alt="...">
+                <div class="contenedor" style="height: 200px;">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/08/78/f2/786293-pool.jpg?w=300&h=300&s=1" class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">Hotel Las Américas Casa de Playa</h5>
                     <p class="card-text">
@@ -66,7 +68,9 @@
         
         <div class="col">
             <div class="card h-100">
-                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/19/e4/12/5e/estelar-playa-manzanillo.jpg?w=300&h=300&s=1" class="card-img-top" alt="...">
+                <div class="contenedor" style="height: 200px;">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/19/e4/12/5e/estelar-playa-manzanillo.jpg?w=300&h=300&s=1" class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;"alt="...">   
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">Hotel Estelar Playa Manzanillo</h5>
                     <p class="card-text">
@@ -80,7 +84,9 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/51/c4/69/superior-room.jpg?w=300&h=300&s=1" class="card-img-top" alt="...">
+                <div class="contenedor" style="height: 200px;">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/51/c4/69/superior-room.jpg?w=300&h=300&s=1" class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">Hotel Cartagena Plaza</h5>
                     <p class="card-text">
