--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-primary p-3">
+    <nav class="navbar navbar-expand-lg bg-primary p-3 jumbotron">
         <div class="container-fluid">
             <a class="navbar-brand text-white fs-3 fw-bold" href="#">ViajaGuarin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -101,7 +101,7 @@
     </div>
 
     <footer>
-        <div class="footer p-4 row">
+        <div class="footer p-4 row bg-primary">
             <div class="col-sm-4 d-flex flex-column">
                 <h6 class="item-footer">Nuestras redes sociales</h6>
                 <a class="item-footer" href="https://www.facebook.com">Facebook</a>
@@ -110,15 +110,15 @@
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-center">
                 <address>
-                    <h4>Nuestas oficinas</h4>
-                    <p>+57316498621</p>
-                    <p>Cll 4, cr 15, barrio La Moral</p>
+                    <h4 style="font-weight: bold;">Nuestas oficinas</h4>
+                    <p>+57 XXXXXXXXXX</p>
+                    <p>Villavicencio Meta</p>
                 </address>
             </div>
-            <div class="col-sm-4 d-flex flex-column align-items-end">
-                <a class="item-footer" href="https://www.facebook.com">Sobre nosotros</a>
-                <a class="item-footer" href="https://www.youtube.com">Terminos y condicones</a>
-                <a class="item-footer" href="https://twitter.com">Contactenos</a>
+            <div class="col-sm-4 d-flex flex-column align-items-end ">
+                <a class="item-footer" href="#">Sobre nosotros</a>
+                <a class="item-footer" href="#">Terminos y condicones</a>
+                <a class="item-footer" href="#">Contactenos</a>
             </div>
         </div>
     </footer>
