--- a/index.html
+++ b/index.html
@@ -43,85 +43,140 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid d-flex justify-content-center bg-warning">
+    <div class="container-fluid d-flex justify-content-center bg-warning" >
         <h3 class="my-2" style="color: #000;">¿Que esperas para viajar?</h3>
     </div>
 
-    <!-- Fichas -->
-    <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-5">
-        <div class="col">
-            <div class="card h-100">
-                <div class="contenedor" style="height: 200px;">
-                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/08/78/f2/786293-pool.jpg?w=300&h=300&s=1" class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Hotel Las Américas Casa de Playa</h5>
-                    <p class="card-text">
-                        El Hotel Las Américas Casa de Playa es un complejo tropical situado frente al Mar Caribe en el norte de Cartagena de Indias. Ofrece 2 piscinas, los bares La Isla y El Chicho, campo de minigolf, cancha de tenis y el Club del “Capitán Estrella” para niños. Hay boutiques, almacén de joyas y WiFi gratuito en todas las zonas.
+    <!-- info -->
+        <div class="d-flex flex-wrap p-5 row-sm-1">
+            <div class="p-3">
+                <div class="caracteristica p-3 card">
+                    <h2>Comodidad</h2>
+                    <p>
+                        Amplias habitaciones y servicios
+                        modernos se combinan para brindar un ambiente acogedor
+                        que te hace sentir como en casa desde el momento en que entras.
                     </p>
-                    <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button">Reservar</button>
-                    </div>
+                </div>
+            </div>
+            <div class="p-3">
+                <div class="caracteristica p-3 card">
+                    <h2>Calidad</h2>
+                    <p>
+                        Exquisita artesanía y atención al detalle en cada rincón.
+                        Materiales de primera calidad y acabados impecables que
+                        reflejan un compromiso inquebrantable con la excelencia.
+                    </p>
+                </div>
+            </div>
+            <div class="p-3">
+                <div class="caracteristica p-3 card">
+                    <h2>Ubicación</h2>
+                    <p>
+                        Estratégicamente ubicados, nuestros
+                        espacios ofrecen fácil acceso a los principales lugares de
+                        interés, restaurantes de renombre y opciones de transporte,
+                        asegurando una experiencia enriquecedora y conveniente.
+                    </p>
                 </div>
             </div>
         </div>
-        
-        <div class="col">
-            <div class="card h-100">
-                <div class="contenedor" style="height: 200px;">
-                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/19/e4/12/5e/estelar-playa-manzanillo.jpg?w=300&h=300&s=1" class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;"alt="...">   
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Hotel Estelar Playa Manzanillo</h5>
-                    <p class="card-text">
-                        El Hotel ESTELAR Playa Manzanillo tiene como único objetivo brindar un lujoso equipamiento todo incluido frente a las paradisíacas playas de la Bahía de Manzanillo del Mar y cerca de la cosmopolita ciudad de Cartagena de Indias, con un diseño contemporáneo y un ambiente especialmente plácido.
-                    </p>
-                    <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button">Reservar</button>
+
+        <!-- Fichas -->
+        <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-5">
+            <div class="col">
+                <div class="card h-100">
+                    <div class="contenedor" style="height: 200px;">
+                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/08/78/f2/786293-pool.jpg?w=300&h=300&s=1"
+                            class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <div class="contenedor" style="height: 200px;">
-                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/51/c4/69/superior-room.jpg?w=300&h=300&s=1" class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Hotel Cartagena Plaza</h5>
-                    <p class="card-text">
-                        A sólo 10 minutos del aeropuerto internacional Rafael Núñez y 5 minutos del centro histórico, bordeado por la más encantadora zona de playa, mar y sol de la ciudad de Cartagena. 311 habitaciones Standard, Superiores, Suites y Junior Suites; píscina panorámica en el piso 18 con la mejor vista hacia la ciudad.
-                    </p>
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Las Américas Casa de Playa</h5>
+                        <p class="card-text">
+                            El Hotel Las Américas Casa de Playa es un complejo tropical situado frente al Mar Caribe en
+                            el norte de Cartagena de Indias. Ofrece 2 piscinas, los bares La Isla y El Chicho, campo de
+                            minigolf, cancha de tenis y el Club del “Capitán Estrella” para niños. Hay boutiques,
+                            almacén de joyas y WiFi gratuito en todas las zonas.
+                        </p>
                         <div class="d-grid gap-2">
                             <button class="btn btn-primary" type="button">Reservar</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                    <div class="contenedor" style="height: 200px;">
+                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/19/e4/12/5e/estelar-playa-manzanillo.jpg?w=300&h=300&s=1"
+                            class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Estelar Playa Manzanillo</h5>
+                        <p class="card-text">
+                            El Hotel ESTELAR Playa Manzanillo tiene como único objetivo brindar un lujoso equipamiento
+                            todo incluido frente a las paradisíacas playas de la Bahía de Manzanillo del Mar y cerca de
+                            la cosmopolita ciudad de Cartagena de Indias, con un diseño contemporáneo y un ambiente
+                            especialmente plácido.
+                        </p>
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary" type="button">Reservar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <div class="contenedor" style="height: 200px;">
+                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/51/c4/69/superior-room.jpg?w=300&h=300&s=1"
+                            class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Cartagena Plaza</h5>
+                        <p class="card-text">
+                            A sólo 10 minutos del aeropuerto internacional Rafael Núñez y 5 minutos del centro
+                            histórico, bordeado por la más encantadora zona de playa, mar y sol de la ciudad de
+                            Cartagena. 311 habitaciones Standard, Superiores, Suites y Junior Suites; píscina panorámica
+                            en el piso 18 con la mejor vista hacia la ciudad.
+                        </p>
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary" type="button">Reservar</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer>
-        <div class="footer p-4 row bg-primary">
-            <div class="col-sm-4 d-flex flex-column">
-                <h6 class="item-footer">Nuestras redes sociales</h6>
-                <a class="item-footer" href="https://www.facebook.com">Facebook</a>
-                <a class="item-footer" href="https://www.youtube.com">Youtube</a>
-                <a class="item-footer" href="https://twitter.com">Twitter</a>
-            </div>
-            <div class="col-sm-4 d-flex flex-column align-items-center">
-                <address>
-                    <h4 style="font-weight: bold;">Nuestas oficinas</h4>
-                    <p>+57 XXXXXXXXXX</p>
-                    <p>Villavicencio Meta</p>
-                </address>
-            </div>
-            <div class="col-sm-4 d-flex flex-column align-items-end ">
-                <a class="item-footer" href="#">Sobre nosotros</a>
-                <a class="item-footer" href="#">Terminos y condicones</a>
-                <a class="item-footer" href="#">Contactenos</a>
-            </div>
+        <div class="containe bg-primary d-flex text-center">
+            <footer class="row row-cols-1 row-cols-sm-1 row-cols-md-3 py-5  border-top expand-lg">
+                <div class="col mb-3">
+                    <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+                        <svg class="bi me-2" width="40" height="32">
+                            <use xlink:href="#bootstrap"></use>
+                        </svg>
+                    </a>
+                    <h3 class="text-muted">ViajaGuarin</h3>
+                    <h5 class="centrado">@2023</h5>
+                </div>
+
+                <div class="col mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Precios</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Nosotros</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contacto</a></li>
+                    </ul>
+                    
+                    <div>
+                        <h6 class="item-footer">Nuestras redes sociales</h6>
+                        <a class="item-footer" href="https://www.facebook.com">Facebook</a>
+                        <a class="item-footer" href="https://www.youtube.com">Youtube</a>
+                        <a class="item-footer" href="https://twitter.com">Twitter</a>
+                    </div>
+                </div>
+            </footer>
         </div>
-    </footer>
 </body>
 
 <!-- Para jQuery -->
