--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-primary p-3 jumbotron">
+    <nav class="navbar navbar-expand-lg bg-primary p-3">
         <div class="container-fluid">
             <a class="navbar-brand text-white fs-3 fw-bold" href="#">ViajaGuarin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -147,36 +147,30 @@
             </div>
         </div>
 
-        <div class="containe bg-primary d-flex text-center">
-            <footer class="row row-cols-1 row-cols-sm-1 row-cols-md-3 py-5  border-top expand-lg">
-                <div class="col mb-3">
-                    <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32">
-                            <use xlink:href="#bootstrap"></use>
-                        </svg>
-                    </a>
-                    <h3 class="text-muted">ViajaGuarin</h3>
-                    <h5 class="centrado">@2023</h5>
-                </div>
+        <!-- footer -->
 
-                <div class="col mb-3">
-                    <h5>Section</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Precios</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Nosotros</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contacto</a></li>
-                    </ul>
-                    
-                    <div>
-                        <h6 class="item-footer">Nuestras redes sociales</h6>
-                        <a class="item-footer" href="https://www.facebook.com">Facebook</a>
-                        <a class="item-footer" href="https://www.youtube.com">Youtube</a>
-                        <a class="item-footer" href="https://twitter.com">Twitter</a>
-                    </div>
+        <footer>
+            <div class="footer p-4 row">
+                <div class="col-sm-4 d-flex flex-column">
+                    <h6 class="item-footer">Nuestras redes sociales</h6>
+                    <a class="item-footer" href="https://www.facebook.com">Facebook</a>
+                    <a class="item-footer" href="https://www.youtube.com">Youtube</a>
+                    <a class="item-footer" href="https://twitter.com">Twitter</a>
                 </div>
-            </footer>
-        </div>
+                <div class="col-sm-4 d-flex flex-column align-items-center">
+                    <address>
+                        <h4>Nuestas oficinas</h4>
+                        <p>+57 XXXXXXXXXXX</p>
+                        <p>Cll 4, cr 15, barrio La Moral</p>
+                    </address>
+                </div>
+                <div class="col-sm-4 d-flex flex-column align-items-end">
+                    <a class="item-footer" href="https://www.facebook.com">Sobre nosotros</a>
+                    <a class="item-footer" href="https://www.youtube.com">Terminos y condicones</a>
+                    <a class="item-footer" href="https://twitter.com">Contactenos</a>
+                </div>
+            </div>
+        </footer>
 </body>
 
 <!-- Para jQuery -->
