--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Precios</a>
+                        <a class="nav-link text-white" href="./productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Nosotros</a>
@@ -43,134 +43,182 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid d-flex justify-content-center bg-warning" >
-        <h3 class="my-2" style="color: #000;">¿Que esperas para viajar?</h3>
+
+    <div class="jumbotron">
+        <h1>Hoteles</h1>
+    </div>
+    <div class="container">
+        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
+        aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Library</li>
+        </ol>
+    </nav>
+    </div>
+    <!-- info -->
+
+    <div class="d-flex flex-wrap p-5 row-sm-1">
+        <div class="p-3">
+            <div class="caracteristica p-3 card">
+                <h2>Comodidad</h2>
+                <p>
+                    Amplias habitaciones y servicios
+                    modernos se combinan para brindar un ambiente acogedor
+                    que te hace sentir como en casa desde el momento en que entras.
+                </p>
+            </div>
+        </div>
+        <div class="p-3">
+            <div class="caracteristica p-3 card">
+                <h2>Calidad</h2>
+                <p>
+                    Exquisita artesanía y atención al detalle en cada rincón.
+                    Materiales de primera calidad y acabados impecables que
+                    reflejan un compromiso inquebrantable con la excelencia.
+                </p>
+            </div>
+        </div>
+        <div class="p-3">
+            <div class="caracteristica p-3 card">
+                <h2>Ubicación</h2>
+                <p>
+                    Estratégicamente ubicados, nuestros
+                    espacios ofrecen fácil acceso a los principales lugares de
+                    interés, restaurantes de renombre y opciones de transporte,
+                    asegurando una experiencia enriquecedora y conveniente.
+                </p>
+            </div>
+        </div>
     </div>
 
-    <!-- info -->
-        <div class="d-flex flex-wrap p-5 row-sm-1">
-            <div class="p-3">
-                <div class="caracteristica p-3 card">
-                    <h2>Comodidad</h2>
-                    <p>
-                        Amplias habitaciones y servicios
-                        modernos se combinan para brindar un ambiente acogedor
-                        que te hace sentir como en casa desde el momento en que entras.
+    <!-- Fichas -->
+    <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-5">
+        <div class="col">
+            <div class="card h-100">
+                <div class="contenedor" style="height: 200px;">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/08/78/f2/786293-pool.jpg?w=300&h=300&s=1"
+                        class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Las Américas Casa de Playa</h5>
+                    <p class="card-text">
+                        El Hotel Las Américas Casa de Playa es un complejo tropical situado frente al Mar Caribe en
+                        el norte de Cartagena de Indias. Ofrece 2 piscinas, los bares La Isla y El Chicho, campo de
+                        minigolf, cancha de tenis y el Club del “Capitán Estrella” para niños. Hay boutiques,
+                        almacén de joyas y WiFi gratuito en todas las zonas.
                     </p>
-                </div>
-            </div>
-            <div class="p-3">
-                <div class="caracteristica p-3 card">
-                    <h2>Calidad</h2>
-                    <p>
-                        Exquisita artesanía y atención al detalle en cada rincón.
-                        Materiales de primera calidad y acabados impecables que
-                        reflejan un compromiso inquebrantable con la excelencia.
-                    </p>
-                </div>
-            </div>
-            <div class="p-3">
-                <div class="caracteristica p-3 card">
-                    <h2>Ubicación</h2>
-                    <p>
-                        Estratégicamente ubicados, nuestros
-                        espacios ofrecen fácil acceso a los principales lugares de
-                        interés, restaurantes de renombre y opciones de transporte,
-                        asegurando una experiencia enriquecedora y conveniente.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Fichas -->
-        <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 my-5">
-            <div class="col">
-                <div class="card h-100">
-                    <div class="contenedor" style="height: 200px;">
-                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/08/78/f2/786293-pool.jpg?w=300&h=300&s=1"
-                            class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Hotel Las Américas Casa de Playa</h5>
-                        <p class="card-text">
-                            El Hotel Las Américas Casa de Playa es un complejo tropical situado frente al Mar Caribe en
-                            el norte de Cartagena de Indias. Ofrece 2 piscinas, los bares La Isla y El Chicho, campo de
-                            minigolf, cancha de tenis y el Club del “Capitán Estrella” para niños. Hay boutiques,
-                            almacén de joyas y WiFi gratuito en todas las zonas.
-                        </p>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" type="button">Reservar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card h-100">
-                    <div class="contenedor" style="height: 200px;">
-                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/19/e4/12/5e/estelar-playa-manzanillo.jpg?w=300&h=300&s=1"
-                            class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Hotel Estelar Playa Manzanillo</h5>
-                        <p class="card-text">
-                            El Hotel ESTELAR Playa Manzanillo tiene como único objetivo brindar un lujoso equipamiento
-                            todo incluido frente a las paradisíacas playas de la Bahía de Manzanillo del Mar y cerca de
-                            la cosmopolita ciudad de Cartagena de Indias, con un diseño contemporáneo y un ambiente
-                            especialmente plácido.
-                        </p>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" type="button">Reservar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="contenedor" style="height: 200px;">
-                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/51/c4/69/superior-room.jpg?w=300&h=300&s=1"
-                            class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Hotel Cartagena Plaza</h5>
-                        <p class="card-text">
-                            A sólo 10 minutos del aeropuerto internacional Rafael Núñez y 5 minutos del centro
-                            histórico, bordeado por la más encantadora zona de playa, mar y sol de la ciudad de
-                            Cartagena. 311 habitaciones Standard, Superiores, Suites y Junior Suites; píscina panorámica
-                            en el piso 18 con la mejor vista hacia la ciudad.
-                        </p>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" type="button">Reservar</button>
-                        </div>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary" type="button">Reservar</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- footer -->
+        <div class="col">
+            <div class="card h-100">
+                <div class="contenedor" style="height: 200px;">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/19/e4/12/5e/estelar-playa-manzanillo.jpg?w=300&h=300&s=1"
+                        class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Estelar Playa Manzanillo</h5>
+                    <p class="card-text">
+                        El Hotel ESTELAR Playa Manzanillo tiene como único objetivo brindar un lujoso equipamiento
+                        todo incluido frente a las paradisíacas playas de la Bahía de Manzanillo del Mar y cerca de
+                        la cosmopolita ciudad de Cartagena de Indias, con un diseño contemporáneo y un ambiente
+                        especialmente plácido.
+                    </p>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary" type="button">Reservar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="contenedor" style="height: 200px;">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/51/c4/69/superior-room.jpg?w=300&h=300&s=1"
+                        class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Cartagena Plaza</h5>
+                    <p class="card-text">
+                        A sólo 10 minutos del aeropuerto internacional Rafael Núñez y 5 minutos del centro
+                        histórico, bordeado por la más encantadora zona de playa, mar y sol de la ciudad de
+                        Cartagena. 311 habitaciones Standard, Superiores, Suites y Junior Suites; píscina panorámica
+                        en el piso 18 con la mejor vista hacia la ciudad.
+                    </p>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary" type="button">Reservar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <div class="container-fluid">
+        <div class="row p-5 bg-primary text-white">
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h3">ViajaGuarin</p>
+                <p>@2023</p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h5">Nuestras redes sociales</p>
+                <div class="mb-3">
+                    <a class="text-white" href="https://www.facebook.com">Facebook</a>
+                </div>
+                <div class="mb-3">
+                    <a class="text-white" href="https://www.youtube.com">Youtube</a>
+                </div>
+                <div class="mb-3">
+                    <a class="text-white" href="https://twitter.com">Twitter</a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h5">Nuestras oficinas</p>
+                <p>+57 XXXXXXXXXXX</p>
+                <p>Cll 4, cr 15, barrio La Moral</p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h5">Leer más</p>
+                <div class="mb-3">
+                    <a class="text-white" href="#">Terminos y condiciones</a>
+                </div>
+                <div class="mb-3">
+                    <a class="text-white" href="#">Contactenos</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
+    <!-- <div class="container p-4 mx-0 row bg-warning">
 
         <footer>
             <div class="footer p-4 row">
-                <div class="col-sm-4 d-flex flex-column">
-                    <h6 class="item-footer">Nuestras redes sociales</h6>
-                    <a class="item-footer" href="https://www.facebook.com">Facebook</a>
-                    <a class="item-footer" href="https://www.youtube.com">Youtube</a>
-                    <a class="item-footer" href="https://twitter.com">Twitter</a>
-                </div>
-                <div class="col-sm-4 d-flex flex-column align-items-center">
-                    <address>
-                        <h4>Nuestas oficinas</h4>
-                        <p>+57 XXXXXXXXXXX</p>
-                        <p>Cll 4, cr 15, barrio La Moral</p>
-                    </address>
-                </div>
-                <div class="col-sm-4 d-flex flex-column align-items-end">
-                    <a class="item-footer" href="https://www.facebook.com">Sobre nosotros</a>
-                    <a class="item-footer" href="https://www.youtube.com">Terminos y condicones</a>
-                    <a class="item-footer" href="https://twitter.com">Contactenos</a>
-                </div>
+            <div class="col-sm-4 d-flex flex-column">
+                <h6 class="item-footer">Nuestras redes sociales</h6>
+                <a class="item-footer" href="https://www.facebook.com">Facebook</a>
+                <a class="item-footer" href="https://www.youtube.com">Youtube</a>
+                <a class="item-footer" href="https://twitter.com">Twitter</a>
             </div>
-        </footer>
+            <div class="col-sm-4 d-flex flex-column align-items-center">
+                <address>
+                    <h4>Nuestas oficinas</h4>
+                    <p>+57 XXXXXXXXXXX</p>
+                    <p>Cll 4, cr 15, barrio La Moral</p>
+                </address>
+            </div>
+            <div class="col-sm-4 d-flex flex-column align-items-end">
+                <a class="item-footer" href="https://www.facebook.com">Sobre nosotros</a>
+                <a class="item-footer" href="https://www.youtube.com">Terminos y condicones</a>
+                <a class="item-footer" href="https://twitter.com">Contactenos</a>
+            </div>
+        </div>
+    </footer>
+</div> -->
 </body>
 
 <!-- Para jQuery -->
