usando BootsTrap icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <!-- boostTrap css -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
 
 </head>
 
@@ -108,7 +109,7 @@
                         almacén de joyas y WiFi gratuito en todas las zonas.
                     </p>
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button">Reservar</button>
+                        <button class="btn btn-primary" type="button">Reservar <i class="bi bi-cart-plus"></i></button>
                     </div>
                 </div>
             </div>
@@ -129,7 +130,7 @@
                         especialmente plácido.
                     </p>
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button">Reservar</button>
+                        <button class="btn btn-primary" type="button">Reservar <i class="bi bi-cart-plus"></i></button>
                     </div>
                 </div>
             </div>
@@ -149,7 +150,7 @@
                         en el piso 18 con la mejor vista hacia la ciudad.
                     </p>
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button">Reservar</button>
+                        <button class="btn btn-primary" type="button">Reservar <i class="bi bi-cart-plus"></i></button>
                     </div>
                 </div>
             </div>
@@ -177,8 +178,8 @@
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3">
                 <p class="h5">Nuestras oficinas</p>
-                <p>+57 XXXXXXXXXXX</p>
-                <p>Cll 4, cr 15, barrio La Moral</p>
+                <p><i class="bi bi-phone iconos"></i>+57 XXXXXXXXXXX</p>
+                <p><i class="bi bi-house iconos"></i>Cll 4, cr 15, barrio La Moral</p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3">
                 <p class="h5">Leer más</p>
