barra de navegacion fija

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-primary p-3">
+<body> 
+    <nav class="navbar navbar-expand-lg bg-primary p-3 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand text-white fs-3 fw-bold" href="#">ViajaGuarin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
