--- a/nosotros.html
+++ b/nosotros.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-primary p-3">
+    <nav class="navbar navbar-expand-lg bg-primary p-3 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand text-white fs-3 fw-bold" href="#">ViajaGuarin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="./nosotros.html">Nosotros</a>
@@ -43,7 +43,7 @@
         </div>
     </nav>
 
-    <div class="container p-5">
+    <div class="container py-5">
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
             aria-label="breadcrumb">
             <ol class="breadcrumb">
