--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link text-white" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contacto</a>
+                        <a class="nav-link text-white" href="./conacto.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -57,7 +57,7 @@
     </nav>
     </div>
     <!-- info -->
-
+    
     <div class="d-flex flex-wrap p-5 row-sm-1">
         <div class="p-3">
             <div class="caracteristica p-3 card">
