--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link text-white" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Productos</a>
+                        <a class="nav-link text-white" href="./precios.html">Precios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="./conacto.html">Contacto</a>
@@ -156,7 +156,6 @@
             </div>
         </div>
     </div>
-
     <!-- footer -->
     <div class="container-fluid">
         <div class="row p-5 bg-primary text-white">
