--- a/conacto.html
+++ b/conacto.html
@@ -29,7 +29,7 @@
                         <a class="nav-link text-white" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Productos</a>
+                        <a class="nav-link text-white" href="./precios.html">Precios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Contacto</a>
@@ -48,7 +48,6 @@
             aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Inicio</a></li>
-                <li class="breadcrumb-item"><a href="./nosotros.html">Nosotros</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Contacto</li>
             </ol>
         </nav>
@@ -69,7 +68,7 @@
                 <div class="col-9">
                     <label for="email" class="form-label">Correo</label>
                     <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electronico">
-                </div>
+                </div> 
                 <div class="col-3 my-5">
                     <select class="form-select" aria-label="Default select example">
                         <option selected>¿Desde donde nos escribes?</option>
