--- a/precios.html
+++ b/precios.html
@@ -54,45 +54,313 @@
         </nav>
 
         <!-- tabla de precios -->
-        <table class="table">
-            <thead class="thead-1">
-                <tr>
-                    <th scope="col">Calidad</th>
-                    <th scope="col">Las Américas</th>
-                    <th scope="col">Estelar Playa</th>
-                    <th scope="col">Cartagena Plaza</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"><i class="bi bi-star-fill"></i></th>
-                    <td>$100</td>
-                    <td>$150</td>
-                    <td>$200</td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                    </th>
-                    <td>$200</td>
-                    <td>$250</td>
-                    <td>$270</td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                    </th>
-                    <td>$400</td>
-                    <td>$450</td>
-                    <td>$500</td>
-                </tr>
-            </tbody>
-        </table>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" data-bs-toggle="tab" aria-current="page" href="#table">Tabla</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#tarjetas">Tarjetas</a>
+            </li>
+            <li>
+                <a class="nav-link" data-bs-toggle="tab" href="#comentarios">Cometarios</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="table" rol="tabpanel" aria-labelledby="table-tab">
+                <div class="table-responsive mt-3">
+                    <table class="table table-light">
+                        <thead class="table-dark">
+                            <th>Calidad</th>
+                            <th>Bogota</th>
+                            <th>Medellin</th>
+                            <th>Barranquilla</th>
+                            <th>Cartagena</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>55.000$</td>
+                                <td>49.000$</td>
+                                <td>56.000$</td>
+                                <td>45.000$</t>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>70.000$</td>
+                                <td>67.000$</td>
+                                <td>71.600$</td>
+                                <td>78.700$</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>95.00$</td>
+                                <td>86.700$</td>
+                                <td>92.900$</td>
+                                <td>88.000$</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>105.000$</td>
+                                <td>115.000$</t>
+                                <td>125.500$</td>
+                                <td>116.700$</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="tab-pane fade mt-2" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+                <div class="accordion" id="accordion-tarjetas">
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-target="#tarjeta-basica"
+                                data-bs-toggle="collapse" aria-controls="tarjeta-basica" aria-expanded="true">
+                                Tarjeta Basica
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" id="tarjeta-basica"
+                            data-bs-parent="#accordion-tarjetas">
+                            <div class="accordion-body">
+                                Descubre la comodidad y conveniencia con nuestra Tarjeta Básica: pagos seguros, acceso a
+                                cajeros, compras en línea y atención al cliente. ¡Solicita la tuya hoy mismo y
+                                simplifica tu día a día!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#tarjeta-vip" aria-expanded="true" aria-controls="tarjeta-vip">
+                                Tarjeta Vip
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" id="tarjeta-vip" data-bs-parent="#accordion-tarjetas">
+                            <div class="accordion-body">
+                                Eleva tu estilo de vida con nuestra Tarjeta VIP: acceso a eventos exclusivos,
+                                experiencias gourmet, compras de lujo, viajes VIP y atención personalizada. ¡Descubre el
+                                lujo en cada detalle!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#tarjeta-black" aria-expanded="true" aria-controls="tarjeta-black">
+                                Tarjeta Black
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" id="tarjeta-black"
+                            data-bs-parent="#accordion-tarjetas">
+                            <div class="accordion-body">
+                                Experimenta el poder y el lujo sin límites con nuestra Tarjeta Black. Acceso exclusivo a
+                                eventos VIP, beneficios de viaje extraordinarios y servicios de élite. ¡Tu estilo de
+                                vida excepcional comienza aquí!
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
+                <p class="mt-3">Comentarios</p>
+            </div>
+                      
+        </div>
+        <!-- tabla -->
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" data-bs-toggle="tab" aria-current="page" href="#table">Tabla</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#tarjetas">Tarjetas</a>
+            </li>
+            <li>
+                <a class="nav-link" data-bs-toggle="tab" href="#comentarios">Cometarios</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="table" rol="tabpanel" aria-labelledby="table-tab">
+                <div class="table-responsive mt-3">
+                    <table class="table table-light">
+                        <thead class="table-dark">
+                            <th>Calidad</th>
+                            <th>Bogota</th>
+                            <th>Medellin</th>
+                            <th>Barranquilla</th>
+                            <th>Cartagena</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>55.000$</td>
+                                <td>49.000$</td>
+                                <td>56.000$</td>
+                                <td>45.000$</t>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>70.000$</td>
+                                <td>67.000$</td>
+                                <td>71.600$</td>
+                                <td>78.700$</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>95.00$</td>
+                                <td>86.700$</td>
+                                <td>92.900$</td>
+                                <td>88.000$</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                    <span class="oi oi-star"></span>
+                                </td>
+                                <td>105.000$</td>
+                                <td>115.000$</t>
+                                <td>125.500$</td>
+                                <td>116.700$</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="tab-pane fade mt-2" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+                <div class="accordion" id="accordion-tarjetas">
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-target="#tarjeta-basica"
+                                data-bs-toggle="collapse" aria-controls="tarjeta-basica" aria-expanded="true">
+                                Tarjeta Basica
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" id="tarjeta-basica"
+                            data-bs-parent="#accordion-tarjetas">
+                            <div class="accordion-body">
+                                Descubre la comodidad y conveniencia con nuestra Tarjeta Básica: pagos seguros, acceso a
+                                cajeros, compras en línea y atención al cliente. ¡Solicita la tuya hoy mismo y
+                                simplifica tu día a día!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#tarjeta-vip" aria-expanded="true" aria-controls="tarjeta-vip">
+                                Tarjeta Vip
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" id="tarjeta-vip" data-bs-parent="#accordion-tarjetas">
+                            <div class="accordion-body">
+                                Eleva tu estilo de vida con nuestra Tarjeta VIP: acceso a eventos exclusivos,
+                                experiencias gourmet, compras de lujo, viajes VIP y atención personalizada. ¡Descubre el
+                                lujo en cada detalle!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#tarjeta-black" aria-expanded="true" aria-controls="tarjeta-black">
+                                Tarjeta Black
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" id="tarjeta-black"
+                            data-bs-parent="#accordion-tarjetas">
+                            <div class="accordion-body">
+                                Experimenta el poder y el lujo sin límites con nuestra Tarjeta Black. Acceso exclusivo a
+                                eventos VIP, beneficios de viaje extraordinarios y servicios de élite. ¡Tu estilo de
+                                vida excepcional comienza aquí!
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
+                <p class="mt-3">Comentarios</p>
+            </div>
+        </div>
+        <!-- <table class="table" id="seccion1">
+                    <thead class="thead-1">
+                        <tr>
+                            <th scope="col">Calidad</th>
+                            <th scope="col">Las Américas</th>
+                            <th scope="col">Estelar Playa</th>
+                            <th scope="col">Cartagena Plaza</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row"><i class="bi bi-star-fill"></i></th>
+                            <td>$100</td>
+                            <td>$150</td>
+                            <td>$200</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                            </th>
+                            <td>$200</td>
+                            <td>$250</td>
+                            <td>$270</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                            </th>
+                            <td>$400</td>
+                            <td>$450</td>
+                            <td>$500</td>
+                        </tr>
+                    </tbody>
+                </table> -->
+
+
+        <!-- tabs -->
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#seccion1">Compara</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#seccion2">Tarjetas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#seccion3">Comentarios</a>
+            </li>
+        </ul>
     </div>
-    
 
     <!-- footer -->
     <div class="container-fluid">
