--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Hotel Las Américas Casa de Playa</h5>
+                    <h5 class="card-title " data-toggle="tooltip" data-placement="top" tittle="las primeras reservas cuentan con clases de yoga" >Hotel Las Américas Casa de Playa</h5>
                     <p class="card-text">
                         El Hotel Las Américas Casa de Playa es un complejo tropical situado frente al Mar Caribe en
                         el norte de Cartagena de Indias. Ofrece 2 piscinas, los bares La Isla y El Chicho, campo de
@@ -137,7 +137,7 @@
                         class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Hotel Estelar Playa Manzanillo</h5>
+                    <h5 class="card-title" data-toggle="tooltip" data-placement="top" tittle="las primeras reservas cuentan con clases de yoga" >Hotel Estelar Playa Manzanillo</h5>
                     <p class="card-text">
                         El Hotel ESTELAR Playa Manzanillo tiene como único objetivo brindar un lujoso equipamiento
                         todo incluido frente a las paradisíacas playas de la Bahía de Manzanillo del Mar y cerca de
@@ -159,7 +159,7 @@
                         class="card-img-top" style="width: 100%; height: 100%; object-fit: cover;" alt="...">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Hotel Cartagena Plaza</h5>
+                    <h5 class="card-title" data-toggle="tooltip" data-placement="top" tittle="las primeras reservas cuentan con clases de yoga" >Hotel Cartagena Plaza</h5>
                     <p class="card-text">
                         A sólo 10 minutos del aeropuerto internacional Rafael Núñez y 5 minutos del centro
                         histórico, bordeado por la más encantadora zona de playa, mar y sol de la ciudad de
@@ -175,6 +175,12 @@
             </div>
         </div>
     </div>
+
+    <script>
+        $(function(){
+            $("[data-toggle='tooltip']").tooltip();
+        })
+    </script>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
